[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/theme/main_menu.tres" type="Theme" id=1]
[ext_resource path="res://src/UI/Commons/AtlasIcon/GamepadAtlasIcon.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/Multiplayer/LocalMultiplayerSlot.gd" type="Script" id=3]
[ext_resource path="res://src/Player/PlayerSkin.tscn" type="PackedScene" id=4]

[node name="LocalMultiplayerSlot" type="PanelContainer"]
margin_right = 107.0
margin_bottom = 198.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 3 )
skin = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 100.0
margin_bottom = 191.0
custom_constants/margin_top = 4
custom_constants/margin_bottom = 4

[node name="Content" type="Control" parent="MarginContainer"]
margin_top = 4.0
margin_right = 93.0
margin_bottom = 180.0

[node name="FreeContent" type="Control" parent="MarginContainer/Content"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SlotFreeContainer" type="VBoxContainer" parent="MarginContainer/Content/FreeContent"]
unique_name_in_owner = true
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -20.0
margin_bottom = 20.0
size_flags_vertical = 0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Content/FreeContent/SlotFreeContainer"]
margin_right = 93.0
margin_bottom = 24.0

[node name="GamepadAtlasIcon" parent="MarginContainer/Content/FreeContent/SlotFreeContainer/CenterContainer" instance=ExtResource( 2 )]
margin_left = 34.0
margin_right = 58.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
action = "jump_0"

[node name="Label" type="Label" parent="MarginContainer/Content/FreeContent/SlotFreeContainer"]
margin_top = 28.0
margin_right = 93.0
margin_bottom = 40.0
text = "To join"
align = 1

[node name="LockedContent" type="Control" parent="MarginContainer/Content"]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PlayerName" type="Label" parent="MarginContainer/Content/LockedContent"]
unique_name_in_owner = true
anchor_right = 1.0
margin_bottom = 12.0
text = "Player 0"
align = 1

[node name="PlayerSkin" parent="MarginContainer/Content/LockedContent" instance=ExtResource( 4 )]
unique_name_in_owner = true
position = Vector2( 44, 133 )
scale = Vector2( 2.5, 2.5 )

[node name="SlotCanBeQuitContainer" type="VBoxContainer" parent="MarginContainer/Content/LockedContent"]
unique_name_in_owner = true
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -40.0
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Content/LockedContent/SlotCanBeQuitContainer"]
margin_right = 93.0
margin_bottom = 24.0

[node name="GamepadAtlasIcon" parent="MarginContainer/Content/LockedContent/SlotCanBeQuitContainer/CenterContainer" instance=ExtResource( 2 )]
margin_left = 34.0
margin_right = 58.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
action = "cancel_0"

[node name="Label" type="Label" parent="MarginContainer/Content/LockedContent/SlotCanBeQuitContainer"]
margin_top = 28.0
margin_right = 93.0
margin_bottom = 40.0
text = "To Quit"
align = 1
